Propagate ignoreInvalidMessageForTesting to the NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=264821 rdar://118404748

Reviewed by Alex Christensen.

This change propagates ignoreInvalidMessageForTesting to the
NetworkConnectionToWebProcess.

* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::didReceiveSyncMessage):
* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::createNetworkConnectionToWebProcess):
* Source/WebKit/Shared/NetworkProcessConnectionParameters.h:
* Source/WebKit/Shared/NetworkProcessConnectionParameters.serialization.in:
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::getNetworkProcessConnection):

Canonical link: https://commits.webkit.org/271305@main